--- a/Billing/WebContent/StyleSheet.css
+++ b/Billing/WebContent/StyleSheet.css
@@ -84,7 +84,7 @@ h1, h2, h3 {
 
 
 .text-right{
-    text-align:center;
+    text-align:left;
     display: block;
      padding: 0px;
     /* margin: 0 auto 1em auto;
