--- a/Billing/WebContent/StyleSheet.css
+++ b/Billing/WebContent/StyleSheet.css
@@ -17,7 +17,34 @@ body {
 	width: 21cm;
 	height: 29.7cm;
 }
-
+/* 
+table,
+tr,
+td,
+th {
+	
+	border-top: none;
+	border-left: none;
+	border-right: none;
+  
+}
+input {
+	
+	border-top: none;
+	border-left: none;
+	border-right: none;
+}
+textarea {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+}
+select{
+border-top: none;
+	border-left: none;
+	border-right: none;
+}
+*/
 @media print {
 	body, page {
 		margin: 0;
@@ -58,6 +85,15 @@ h1, h2, h3 {
 }
 
 /*------------------ Table --------------------*/
+.table-Add{
+	/*border-collapse: collapse;*/
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 4px;
+  
+    
+}
 .tr {
 	font-size: 14px;
 }
@@ -72,8 +108,8 @@ h1, h2, h3 {
 
 .thG {
 	font-size: 16px;
-	font-weight: bold;
-	border: thick ;
+	font-weight: 600;
+/*	border: thick ; */
 }
 
 .text1 {
@@ -89,7 +125,7 @@ h1, h2, h3 {
 }
 
 .table1 {
-	border: 1px solid;
+	/*border: 1px;*/
 }
 /*
 .text-right1 {
@@ -112,12 +148,17 @@ h1, h2, h3 {
 
 /*------------------ Div --------------------*/
 .rowmain {
-	display: flex;
+	/*display: flex;
 	width: 99.6%;
 	padding: 1px 0 1px 0;
 	margin: 1px 0 1px 0;
-	border: 1px solid;
-	overflow: none;
+	
+	overflow: none;*/
+    
+    display: flex;
+    width: 100%;
+    margin: 5px 5px 0 0;
+    justify-content: center;
 }
 
 .leftone {
@@ -146,13 +187,13 @@ h1, h2, h3 {
 	float: left;
 	clear: right;
 	width: 65%;
-	height: 150px;
+	height: 190px;
 	font-family: Arial;
 	font-size: 14px;
 	margin: 12px 14px 22px 0;
 	padding: 0;
-	border: 1px solid;
-	overflow: hidden;
+/*	border: 1px solid;
+	overflow: hidden;*/
 }
 
 .righttext {
@@ -160,17 +201,23 @@ h1, h2, h3 {
 	float: right;
 	clear: right;
 	width: 35%;
-	height: 150px;
+	height: 190px;
 	margin: 1px 1px 1px 1px;
 	padding: 0px 0px 0px 30px;
 	font-family: Arial;
 	font-size: 14px;
-	border: 0px solid;
+	/*border: 0px solid;*/
 }
 
 
+@media print {
+  body, page {
+    margin: 0;
+    box-shadow: 0;
+  }
+}
 
-/* Medium Devices, Desktops */
+/* Medium Devices, Desktops 
 @media only screen and (max-width : 600px) {
 	.lefttext {
 		width: 98%;
@@ -179,7 +226,7 @@ h1, h2, h3 {
 	.righttext {
 		width: 98%;
 		margin: auto;
-		border: 2px dashed white;
+		/*border: 2px dashed white;*/
 	}
 	.leftone {
 		width: 98%;
@@ -188,6 +235,6 @@ h1, h2, h3 {
 	.rightone {
 		width: 98%;
 		margin: auto;
-		border: 2px dashed white;
+		/*border: 2px dashed white;*/
 	}
-}
+} */
