--- a/Billing/WebContent/StyleSheet.css
+++ b/Billing/WebContent/StyleSheet.css
@@ -165,7 +165,7 @@ h1, h2, h3 {
 	position: relative;
 	float: left;
 	clear: right;
-	width: 53%;
+/*	width: 53%;*/
 	height: 20px;
 	font-family: Arial;
 	font-size: 14px;
