--- a/Billing/WebContent/StyleSheet.css
+++ b/Billing/WebContent/StyleSheet.css
@@ -238,11 +238,14 @@ h1, h2, h3 {
 		/*border: 2px dashed white;*/
 	}
 } */
-input[type=number] {
-    -moz-appearance: textfield;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
+
+/* Firefox */
 input[type=number] {
-    -moz-appearance: textfield;
-    -webkit-appearance: none;
-    border-radius: 0;
+  -moz-appearance: textfield;
 }
