--- a/Billing/WebContent/stylesheet.css
+++ b/Billing/WebContent/stylesheet.css
@@ -238,13 +238,13 @@ h1, h2, h3 {
 		/*border: 2px dashed white;*/
 	}
 } */
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
 }
-
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
