--- a/Billing/WebContent/stylesheet.css
+++ b/Billing/WebContent/stylesheet.css
@@ -3,6 +3,7 @@
 /* ----------Body and Page-Size----------- */
 body {
 	background: rgb(204, 204, 204);
+	font-family: 'Montserrat', sans-serif;
 }
 
 .page {
