--- a/Billing/WebContent/stylesheet.css
+++ b/Billing/WebContent/stylesheet.css
@@ -30,7 +30,6 @@ th {
   
 }
 input {
-	
 	border-top: none;
 	border-left: none;
 	border-right: none;
@@ -50,6 +49,7 @@ border-top: none;
 	body, page {
 		margin: 0;
 		box-shadow: 0;
+		font-family: 'Montserrat', sans-serif;
 	}
 }
 
@@ -92,8 +92,7 @@ h1, h2, h3 {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4px;
-  
-    
+   font-family: 'Montserrat', sans-serif;
 }
 .tr {
 	font-size: 14px;
@@ -109,7 +108,7 @@ h1, h2, h3 {
 
 .thG {
 	font-size: 16px;
-	font-weight: 600;
+	font-weight: 500;
 /*	border: thick ; */
 }
 
@@ -142,20 +141,11 @@ h1, h2, h3 {
 	/* margin: 0 auto 1em auto;
     width: 90%;  
      border: 1px solid #818181;
- 	 -moz-border-radius: 1px;
-    -webkit-border-radius: 1px; 
     padding: 3px;*/
 }
 
 /*------------------ Div --------------------*/
 .rowmain {
-	/*display: flex;
-	width: 99.6%;
-	padding: 1px 0 1px 0;
-	margin: 1px 0 1px 0;
-	
-	overflow: none;*/
-    
     display: flex;
     width: 100%;
     margin: 5px 5px 0 0;
@@ -168,7 +158,7 @@ h1, h2, h3 {
 	clear: right;
 /*	width: 53%;*/
 	height: 20px;
-	font-family: Arial;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	overflow: hidden;
 }
@@ -179,7 +169,7 @@ h1, h2, h3 {
 	clear: left;
 	width: 46%;
 	height: 20px;
-	font-family: Arial;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 }
 
@@ -189,7 +179,7 @@ h1, h2, h3 {
 	clear: right;
 	width: 65%;
 	height: 190px;
-	font-family: Arial;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	margin: 12px 14px 22px 0;
 	padding: 0;
@@ -205,7 +195,7 @@ h1, h2, h3 {
 	height: 190px;
 	margin: 1px 1px 1px 1px;
 	padding: 0px 0px 0px 30px;
-	font-family: Arial;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	/*border: 0px solid;*/
 }
